--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Main page</title>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" href = "style.css"/>
         <style>
             #p1 {
@@ -13,6 +15,7 @@
         </style>
     </head>
     <body>
+        <a href="page2.html">Page 2</a>
         <a href="http://www.google.lv">Google</a>
         <div style="width: 50%; background: skyblue;">
             <h1 id="start">Hello world!</h1>       
