--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,8 @@
         <a href="index.html" class="btn btn-success">Sākums</a>
         <a href="http://www.google.lv" class="btn btn-success">Google</a>       
         <button type="button" class="btn btn-success">Succes </button>
-        <form>
+        <div style="width: 50%; ">
+          <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -24,5 +25,6 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
+        </div>
     </body>
 </html>
